# oauth-sentinel

./: pyproject.toml
.github/: pull_request_template.md
.github/workflows/: lint.yml
src/oauth_sentinel/: __init__.py  main.py
tests/: test_canary.py
