[project]
name = "oauth-sentinel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joseph Chu", email = "hotcupofjoe2013@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.110.0",
    "msal>=1.27.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
oauth-sentinel = "oauth_sentinel:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "black>=26.1.0",
    "httpx>=0.28.1",
    "pip-audit>=2.9.0",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
    "semgrep>=1.152.0",
]
[tool.uv]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "DTZ", "ASYNC"]
ignore = ["E501", "S101"]
